--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -1,5 +1,5 @@
 model_params:
-  name: 'BetaVAE'
+  name: 'VAE'
   beta: 10.0
   latent_dim: 10
   channels_list: [32, 64, 128, 256]
@@ -11,14 +11,13 @@ opt_params:
 
 
 data_params:
-  dataset_name: celeba
+  dataset_name: cifar10
   batch_size: 144 # Better to have a square number
   test_batch_size: 400
   train_split: 0.7
 
 trainer_params:
   gpus: 1
-  max_nb_epochs: 50
   max_epochs: 50
 
 logging_params:
