--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -2,17 +2,19 @@ model_params:
   name: 'VAE'
   beta: 4.0
   latent_dim: 32
-  channels_list: [32, 32, 64]
+  channels_list: [32, 32]
   filter_size: 4
+  stride: 1
 
 opt_params:
   LR: 0.0001
   weight_decay: 0.0
   scheduler_gamma: 0.95
+  KL_decay: 0.9
 
 
 data_params:
-  dataset_name: cifar10
+  dataset_name: MNIST
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
@@ -25,6 +27,6 @@ logging_params:
   save_dir: "logs/"
   name: "BetaVAE"
   manual_seed: 1265
-  version: v9
-  plot_every: 5
+  version: v11
+  plot_every: 10
 
