--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -14,7 +14,7 @@ opt_params:
 
 
 data_params:
-  dataset_name: MNIST
+  dataset_name: cifar10
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
@@ -27,6 +27,6 @@ logging_params:
   save_dir: "logs/"
   name: "BetaVAE"
   manual_seed: 1265
-  version: v11
+  version: v12
   plot_every: 10
 
