--- a/configs/SAE.yaml
+++ b/configs/SAE.yaml
@@ -1,11 +1,11 @@
 model_params:
   name: 'SAE'
-  latent_dim: 12
+  latent_dim: 32
   channels_list_enc: [32, 32, 64, 64]
-  channels_list_dec: [3, 3, 3, 3]
+  channels_list_dec: [64, 32, 64, 32]
   filter_size: 4
   stride: 2
-  unit_dim: 3
+  unit_dim: 8
   upsampling_factor: 2
   latent_vecs: 128 # for hybrid sampling
 
@@ -13,22 +13,23 @@ opt_params:
   LR: 0.0005
   weight_decay: 0.0
   scheduler_gamma: 0.95
+  auto_epochs: 0
 
 
 data_params:
-  dataset_name: cifar10
+  dataset_name: MNIST
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
 
 trainer_params:
   gpus: 1
-  max_epochs: 50
+  max_epochs: 100
 
 logging_params:
   save_dir: "logs/"
   name: "SAE"
   manual_seed: 1265
-  version: v1
+  version: v2
   plot_every: 5
 
