--- a/configs/SAE.yaml
+++ b/configs/SAE.yaml
@@ -19,7 +19,7 @@ opt_params:
 
 
 data_params:
-  dataset_name: MNIST
+  dataset_name: RFD
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
