--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -2,9 +2,9 @@ model_params:
   name: 'VAE'
   beta: 4.0
   latent_dim: 32
-  channels_list: [32, 32]
-  filter_size: 4
-  stride: 1
+  enc_depth: 12 #number of convolutional layers in the encoder
+  dec_depth: 12
+  pool_every: 3
 
 opt_params:
   LR: 0.0001
