--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -15,16 +15,16 @@ opt_params:
   auto_epochs: -1
 
 data_params:
-  dataset_name: RFD
+  dataset_name: MNIST
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
   heldout: False
   real: False
-  subset: False #limit number of samples to 200.000 (to avoid memory errors)
+  subset: False #limit number of samples to 100'000 (to avoid memory errors)
 
 trainer_params:
-  gpus: 0
+  gpus: 1
   max_epochs: 100
 
 tuner_params:
