--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -15,7 +15,7 @@ opt_params:
   auto_epochs: -1
 
 data_params:
-  dataset_name: MNIST
+  dataset_name: RFD
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   train_split: 0.7
