--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 pytorch_lightning
-matplotlib~=3.1.1
-torchvision~=0.8.1
-ray~=1.2.0
-numpy~=1.17.3
-torch~=1.7.0
-Pillow~=6.2.1
-PyYAML~=5.1.2
-
-webdataset~=0.1.58
+matplotlib
+torchvision
+ray
+numpy
+torch
+Pillow
+PyYAML
+webdataset
