--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -15,7 +15,7 @@ opt_params:
   auto_epochs: -1
 
 data_params:
-  dataset_name: RFD
+  dataset_name: MNIST
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
   heldout: False
@@ -23,7 +23,7 @@ data_params:
   subset: False #limit number of samples to 100'000 (to avoid memory errors)
 
 trainer_params:
-  gpus: 0
+  gpus: 1
   max_epochs: 100
 
 tuner_params:
