--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -7,12 +7,13 @@ model_params:
   unit_dim: 4
   upsampling_factor: 2
   latent_vecs: 128 # for hybrid sampling
+  residual_fc: True
 
 opt_params:
-  LR: 0.0005
+  LR: 0.0002
   weight_decay: 0.0
   scheduler_gamma: 0.95
-  auto_epochs: -1
+  auto_epochs: 50
 
 data_params:
   dataset_name: MNIST
@@ -24,7 +25,7 @@ data_params:
 
 trainer_params:
   gpus: 1
-  max_epochs: 100
+  max_epochs: 150
 
 tuner_params:
   num_samples: 1
@@ -34,6 +35,6 @@ logging_params:
   save_dir: "logs/"
   name: "BaseSAE"
   manual_seed: 1265
-  version: v5
-  plot_every: 5
+  version: cluster1
+  plot_every: 1
 
