--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pytorch_lightning
-matplotlib
-torchvision
-ray
-numpy
-torch
-Pillow
-PyYAML
-webdataset
+matplotlib==3.3.4
+webdataset==0.1.58
+torchvision==0.9.0
+torch==1.8.0
+pytorch_lightning==1.2.7
+ray==1.2.0
+numpy==1.19.2
+Pillow==8.2.0
+PyYAML==5.4.1
