--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -36,5 +36,13 @@ logging_params:
   name: "BaseSAE"
   manual_seed: 1265
   version: cluster1
-  plot_every: 1
+
+vis_params:
+  save_dir: "vis/"
+  plot_every: 5
+  num_animations: 5
+  num_frames: 5
+  fpd: 10
+  num_points_irs: 10000
+
 
