--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -14,7 +14,7 @@ opt_params:
 
 
 data_params:
-  dataset_name: MNIST
+  dataset_name: 3DShapes
   batch_size: 144 # Better to have a square number
   test_batch_size: 144
 
