--- a/configs/BaseSAE.yaml
+++ b/configs/BaseSAE.yaml
@@ -3,17 +3,17 @@ model_params:
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  pool_every: 2
-  unit_dim: 4
-  upsampling_factor: 2
+  pool_every: 3
+  unit_dim: 12
   latent_vecs: 128 # for hybrid sampling
-  residual_fc: True
+  residual: True
+
 
 opt_params:
   LR: 0.0002
   weight_decay: 0.0
   scheduler_gamma: 0.95
-  auto_epochs: 50
+  auto_epochs: 0
 
 data_params:
   dataset_name: MNIST
@@ -25,7 +25,7 @@ data_params:
 
 trainer_params:
   gpus: 1
-  max_epochs: 150
+  max_epochs: 300
 
 tuner_params:
   num_samples: 1
@@ -35,11 +35,12 @@ logging_params:
   save_dir: "logs/"
   name: "BaseSAE"
   manual_seed: 1265
-  version: standardAE
+  version: cluster1
+  score_every: 10 # more advanced metrics scoring
 
 vis_params:
   save_dir: "vis/"
-  plot_every: 10
+  plot_every: 20
   num_animations: 5
   num_frames: 5
   fpd: 10
