--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -5,6 +5,7 @@ model_params:
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
   pool_every: 3
+  residual: True
 
 opt_params:
   LR: 0.0001
@@ -20,7 +21,7 @@ data_params:
 
 trainer_params:
   gpus: 1
-  max_epochs: 100
+  max_epochs: 300
 
 logging_params:
   save_dir: "logs/"
