--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -15,9 +15,9 @@ opt_params:
 
 
 data_params:
-  dataset_name: MNIST
-  batch_size: 144 # Better to have a square number
-  test_batch_size: 144
+  dataset_name: 3DShapes
+  batch_size: 500 # Better to have a square number
+  test_batch_size: 500
 
 trainer_params:
   gpus: 1
@@ -27,13 +27,13 @@ logging_params:
   save_dir: "logs/"
   name: "BetaVAE"
   manual_seed: 1265
-  version: cluster1
-  score_every: 1000
+  version: VAE12_shapes3d
+  score_every: 20
 
 
 vis_params:
   save_dir: "vis/"
-  plot_every: 20
+  plot_every: 10
   num_animations: 5
   num_frames: 5
   fpd: 10
