--- a/configs/standard.yaml
+++ b/configs/standard.yaml
@@ -1,23 +1,13 @@
 model_params:
-  name: 'VAE'
-  beta: 4.0
-  latent_size: 12
-  enc_depth: 12 #number of convolutional layers in the encoder
-  dec_depth: 12
-  pool_every: 3
-  residual: True
+  name: 'null'
 
 opt_params:
   LR: 0.0001
   weight_decay: 0.0
   scheduler_gamma: 0.95
-  KL_decay: 1.0
-
 
 data_params:
-  dataset_name: 3DShapes
-  batch_size: 500 # Better to have a square number
-  test_batch_size: 500
+  dataset_name: 'null'
 
 trainer_params:
   gpus: 1
@@ -25,9 +15,8 @@ trainer_params:
 
 logging_params:
   save_dir: "logs/"
-  name: "BetaVAE"
   manual_seed: 1265
-  version: VAE12_shapes3d
+  version: 'null'
   score_every: 20
 
 
