--- a/configs/data/RFD_IT.yaml
+++ b/configs/data/RFD_IT.yaml
@@ -1,6 +1,6 @@
 dataset_name: RFD_IT
-batch_size: 500 # Better to have a square number
-test_batch_size: 500
+batch_size: null # Pre-batched by web dataset
+test_batch_size: 500 # not pre-batched
 score_every: 20
 plot_every: 5
-num_workers: 0
+num_workers: 3
