--- a/configs/standard.yaml
+++ b/configs/standard.yaml
@@ -24,7 +24,7 @@ trainer_params:
   deterministic: True #might make the system slower
 
 logging_params:
-  save_dir: "/cluster/scratch/glanzillo/logs/"
+  save_dir: "./logs/"
   manual_seed: 1265
   version: 'null'
   score_every: 20 # number of steps
