--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-ray==1.2.0
-torch==1.8.0
-pytorch_lightning==1.2.7
-webdataset==0.1.58
 torchvision==0.9.0
-h5py==2.10.0
+pytorch_lightning==1.2.7
 numpy==1.19.2
+h5py==2.10.0
+webdataset==0.1.58
+six==1.15.0
+scipy==1.5.3
+absl_py==0.12.0
 matplotlib==3.3.4
+torch==1.8.0
+ray==1.2.0
+absl==0.0
 Pillow==8.2.0
 PyYAML==5.4.1
+scikit_learn==0.24.2
