--- a/configs/models/VecBetaVAE/standard.yaml
+++ b/configs/models/VecBetaVAE/standard.yaml
@@ -2,11 +2,16 @@ model_params:
   name: 'VecBetaVAE'
   beta: 4.0
   latent_size: 10
-  depth: 8 #number of linear layers in the encoder and decoder
+  depth: 5 #number of linear layers in the encoder and decoder
   dittadi: False
   gaussian_init: 'xavier' #other option: 'normal'
   loss_type: "MSE"
+  act: 'leaky_relu'
+  full: False
 
 opt_params:
   KL_decay: 2.0
   beta_schedule: 'cyclic'
+
+logging_params:
+  save_dir: "./logs/"
