unveiled MNIST gray mistery, and other similar adventures

--- a/configs/models/BaseSAE/dummy.yaml
+++ b/configs/models/BaseSAE/dummy.yaml
@@ -3,23 +3,23 @@ model_params:
   latent_vecs: 128 # for hybrid sampling
   residual: True
   latent_size: 6
-  enc_depth: 6 #number of convolutional layers in the encoder
-  dec_depth: 6
-  pool_every: 2
-  unit_dim: 1
+  enc_depth: 3 #number of convolutional layers in the encoder
+  dec_depth: 3
+  pool_every: 1
+  unit_dim: 2
   norm: 'batch'
   channels: 32
 
 
 trainer_params:
-  val_check_interval: 2
+  val_check_interval: 20
   #check validation every 2 steps
   # the dummy model should be a test tool
 
 
 logging_params:
   score_every: 1000
-  #save_dir: "./logs/"
+  save_dir: "./logs/"
 
 
 vis_params:
