--- a/configs/models/ESAE/dummy.yaml
+++ b/configs/models/ESAE/dummy.yaml
@@ -2,13 +2,13 @@ model_params:
   name: 'ESAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
-  latent_size: 10
-  enc_depth: 6 #number of convolutional layers in the encoder
-  dec_depth: 6
-  pool_every: 2
+  latent_size: 6
+  enc_depth: 3 #number of convolutional layers in the encoder
+  dec_depth: 3
+  pool_every: 1
   unit_dim: 2
-  norm: 'group'
-  channels: 64
+  norm: 'batch'
+  channels: 32
   # --------- parameters related to MMD kernel setting ----------
   MMD_kernel: "RBF" #or IMQ or cat
   #"strict": False
@@ -16,5 +16,10 @@ model_params:
   lamda: 2.0
 
 vis_params:
-  plot_every: 1
+  plot_every: 5
+
+
+logging_params:
+  score_every: 1000
+#  save_dir: "./logs/"
 
