--- a/configs/models/ESAE/unbalanced1.yaml
+++ b/configs/models/ESAE/unbalanced1.yaml
@@ -2,24 +2,24 @@ model_params:
   name: 'ESAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
-  latent_size: 6
-  enc_depth: 3 #number of convolutional layers in the encoder
-  dec_depth: 3
-  pool_every: 1
+  latent_size: 12
+  enc_depth: 12 #number of convolutional layers in the encoder
+  dec_depth: 6
+  pool_every: 2
   unit_dim: 2
-  norm: 'batch'
   channels: 32
   # --------- parameters related to MMD kernel setting ----------
-  MMD_kernel: "RBF" #or IMQ or cat
+  MMD_kernel: "IMQ" #or IMQ or cat
   #"strict": False
   #"hierarchy": False
-  lamda: 2.0
+  lamda: 1.0
 
 vis_params:
   plot_every: 5
 
 
 logging_params:
-  score_every: 1000
-  save_dir: "./logs/"
+  score_every: 100
+#  save_dir: "./logs/"
+
 
