--- a/configs/models/VecSAE/standard.yaml
+++ b/configs/models/VecSAE/standard.yaml
@@ -1,5 +1,5 @@
 model_params:
-  name: 'BaseSAE'
+  name: 'VecSAE'
   latent_vecs: 128 # for hybrid sampling
   latent_size: 10
   depth: 5 #number of linear layers in the encoder and decoder
