fixed disentanglement scoring failure

--- a/configs/models/RSAE/dummy.yaml
+++ b/configs/models/RSAE/dummy.yaml
@@ -1,12 +1,13 @@
 model_params:
-  name: 'ESAE'
+  name: 'RSAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
-  latent_size: 12
-  enc_depth: 12 #number of convolutional layers in the encoder
-  dec_depth: 6
-  pool_every: 2
+  latent_size: 6
+  enc_depth: 3 #number of convolutional layers in the encoder
+  dec_depth: 3
+  pool_every: 1
   unit_dim: 2
+  norm: 'batch'
   channels: 32
   # --------- parameters related to MMD kernel setting ----------
   MMD_kernel: "RBF" #or IMQ or cat
@@ -14,6 +15,11 @@ model_params:
   #"hierarchy": False
   lamda: 2.0
 
+vis_params:
+  plot_every: 10
+
+
 logging_params:
   score_every: 1000
   save_dir: "./logs/"
+
