--- a/configs/models/RSAE/v121.yaml
+++ b/configs/models/RSAE/v121.yaml
@@ -1,19 +1,15 @@
 model_params:
-  name: 'ESAE'
+  name: 'RSAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
-  dec_depth: 6
-  pool_every: 2
-  unit_dim: 2
-  channels: 32
+  dec_depth: 12
+  pool_every: 3
+  unit_dim: 1
+  channels: 64
   # --------- parameters related to MMD kernel setting ----------
-  MMD_kernel: "RBF" #or IMQ or cat
+  MMD_kernel: "IMQ" #or IMQ or cat
   #"strict": False
   #"hierarchy": False
   lamda: 2.0
-
-logging_params:
-  score_every: 1000
-  save_dir: "./logs/"
