--- a/configs/models/VecESAE/standard.yaml
+++ b/configs/models/VecESAE/standard.yaml
@@ -14,4 +14,9 @@ model_params:
 
 logging_params:
   manual_seed: 1265
-  #save_dir: "./logs/"
+  save_dir: "./logs/"
+  score_every: 20 # number of validations
+
+trainer_params:
+  val_check_interval: 500 #check validation every 200 steps
+  max_steps: 20000
