--- a/configs/models/VecESAE/standard.yaml
+++ b/configs/models/VecESAE/standard.yaml
@@ -14,7 +14,7 @@ model_params:
 
 logging_params:
   manual_seed: 1265
-  save_dir: "./logs/"
+  #save_dir: "./logs/"
   score_every: 20 # number of validations
 
 trainer_params:
