--- a/configs/models/BaseSAE/standard.yaml
+++ b/configs/models/BaseSAE/standard.yaml
@@ -5,6 +5,6 @@ model_params:
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  pool_every: 3
+  num_pools: 3
   unit_dim: 1
-  channels: 64
+  channels: 32
