--- a/configs/models/RSAE/standard.yaml
+++ b/configs/models/RSAE/standard.yaml
@@ -5,11 +5,12 @@ model_params:
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  pool_every: 3
+  num_pools: 3
   unit_dim: 1
-  channels: 64
+  channels: 32
   # --------- parameters related to MMD kernel setting ----------
   MMD_kernel: "RBF" #or IMQ or cat
   #"strict": False
   #"hierarchy": False
   lamda: 2.0
+
