--- a/configs/models/RSAE/v121.yaml
+++ b/configs/models/RSAE/v121.yaml
@@ -5,7 +5,7 @@ model_params:
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  pool_every: 3
+  num_pools: 4
   unit_dim: 1
   channels: 64
   # --------- parameters related to MMD kernel setting ----------
@@ -13,3 +13,8 @@ model_params:
   #"strict": False
   #"hierarchy": False
   lamda: 2.0
+  loss_type: "MSE"
+
+eval_params:
+  name: "scoring"
+  FID: True
