--- a/configs/models/VecRSAE/full.yaml
+++ b/configs/models/VecRSAE/full.yaml
@@ -1,5 +1,5 @@
 model_params:
-  name: 'VecSAE'
+  name: 'VecRSAE'
   latent_vecs: 128 # for hybrid sampling
   latent_size: 10
   depth: 7 #number of linear layers in the encoder and decoder
@@ -10,7 +10,7 @@ model_params:
 
 logging_params:
   manual_seed: 1265
-  save_dir: "./logs/"
+  #save_dir: "./logs/"
 
 trainer_params:
   val_check_interval: 500 #check validation every 200 steps
