--- a/configs/models/VecVAE/standard.yaml
+++ b/configs/models/VecVAE/standard.yaml
@@ -15,7 +15,7 @@ opt_params:
 
 logging_params:
   manual_seed: 1265
-  save_dir: "./logs/"
+  #save_dir: "./logs/"
   score_every: 20 # number of validations
 
 trainer_params:
