--- a/configs/models/BaseSAE/unbalanced.yaml
+++ b/configs/models/BaseSAE/unbalanced.yaml
@@ -2,14 +2,15 @@ model_params:
   name: 'BaseSAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
-  latent_size: 12
+  latent_size: 6
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 6
-  pool_every: 2
-  unit_dim: 2
+  num_pools: 3
+  unit_dim: 1
   channels: 32
 
 
-logging_params:
-  score_every: 1000
-  save_dir: "./logs/"
+eval_params:
+  name: "scoring"
+  FID: False
+  latent_responses: True
