--- a/configs/models/BetaVAE/standard.yaml
+++ b/configs/models/BetaVAE/standard.yaml
@@ -3,13 +3,17 @@ model_params:
   beta: 4.0
   residual: True
   latent_size: 12
-  enc_depth: 6 #number of convolutional layers in the encoder
-  dec_depth: 6
-  pool_every: 2
-  channels: 64
+  enc_depth: 12 #number of convolutional layers in the encoder
+  dec_depth: 12
+  num_pools: 3
+  channels: 32
   dittadi: False
   gaussian_init: 'xavier' #other option: 'normal'
 
 opt_params:
   KL_decay: 1.0
   beta_schedule: 'cyclic'
+
+eval_params:
+  name: "scoring"
+  FID: False
