--- a/configs/models/RAE/standard.yaml
+++ b/configs/models/RAE/standard.yaml
@@ -1,5 +1,5 @@
 model_params:
-  name: 'ESAE'
+  name: 'RAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
   latent_size: 12
@@ -7,13 +7,12 @@ model_params:
   dec_depth: 12
   num_pools: 3
   unit_dim: 1
-  channels: 32
+  channels: 64
   # --------- parameters related to MMD kernel setting ----------
   MMD_kernel: "RBF" #or IMQ or cat
   #"strict": False
   #"hierarchy": False
   lamda: 2.0
-
 
 eval_params:
   name: "scoring"
