--- a/configs/models/RAE/v121.yaml
+++ b/configs/models/RAE/v121.yaml
@@ -1,20 +1,20 @@
 model_params:
-  name: 'ESAE'
+  name: 'RAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  num_pools: 3
+  num_pools: 4
   unit_dim: 1
-  channels: 32
+  channels: 64
   # --------- parameters related to MMD kernel setting ----------
-  MMD_kernel: "RBF" #or IMQ or cat
+  MMD_kernel: "IMQ" #or IMQ or cat
   #"strict": False
   #"hierarchy": False
   lamda: 2.0
-
+  loss_type: "MSE"
 
 eval_params:
   name: "scoring"
-  FID: False
+  FID: True
