--- a/configs/models/XCAE/standardS.yaml
+++ b/configs/models/XCAE/standardS.yaml
@@ -1,13 +1,13 @@
 model_params:
-  name: 'XSAE'
+  name: 'XCAE'
   latent_vecs: 128 # for hybrid sampling
-  residual: True
-  latent_size: 12
-  enc_depth: 12 #number of convolutional layers in the encoder
-  dec_depth: 12
+  latent_size: 6
+  enc_depth: 6 #number of convolutional layers in the encoder
+  dec_depth: 6
   num_pools: 3
   unit_dim: 1
   channels: 32
+  loss_type: "MSE"
   # invariance regularisation parameters
   lamda: 2.0
   num_samples: 100
@@ -16,5 +16,6 @@ model_params:
 eval_params:
   name: "scoring"
   FID: True
-  latent_responses: True
   mode: 'X'
+
+
