--- a/configs/models/XCSAE/v121.yaml
+++ b/configs/models/XCSAE/v121.yaml
@@ -1,13 +1,14 @@
 model_params:
-  name: 'XSAE'
+  name: 'XCSAE'
   latent_vecs: 128 # for hybrid sampling
   residual: True
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  num_pools: 3
+  num_pools: 4
   unit_dim: 1
-  channels: 32
+  channels: 64
+  loss_type: "MSE"
   # invariance regularisation parameters
   lamda: 2.0
   num_samples: 100
@@ -16,5 +17,4 @@ model_params:
 eval_params:
   name: "scoring"
   FID: True
-  latent_responses: True
   mode: 'X'
