--- a/configs/models/XSAE/v121.yaml
+++ b/configs/models/XSAE/v121.yaml
@@ -9,6 +9,10 @@ model_params:
   unit_dim: 1
   channels: 64
   loss_type: "MSE"
+  # invariance regularisation parameters
+  lamda: 2.0
+  num_samples: 100
+  num_interventions: 20
 
 eval_params:
   name: "scoring"
