--- a/configs/models/XSAE/standard.yaml
+++ b/configs/models/XSAE/standard.yaml
@@ -8,10 +8,8 @@ model_params:
   num_pools: 3
   unit_dim: 1
   channels: 32
-  # invariance regularisation parameters
-  lamda: 2.0
-  num_samples: 100
-  num_interventions: 20
+  # sparsity regularisation parameters
+  sparsity_lamda: 2.0
 
 eval_params:
   name: "scoring"
