--- a/configs/models/XVAE/v121.yaml
+++ b/configs/models/XVAE/v121.yaml
@@ -1,21 +1,22 @@
 model_params:
-  name: 'BetaVAE'
-  residual: True
+  name: 'XVAE'
+  beta: 4.0
   latent_size: 12
   enc_depth: 12 #number of convolutional layers in the encoder
   dec_depth: 12
-  num_pools: 3
-  channels: 32
-  dittadi: False
+  num_pools: 4
+  unit_dim: 1
+  channels: 64
+  loss_type: "MSE"
   gaussian_init: 'xavier' #other option: 'normal'
-  beta: 4.0
-
 
 
 opt_params:
   KL_decay: 1.0
-  beta_schedule: 'cyclic'
+  beta_schedule: 'linear'
+
 
 eval_params:
   name: "scoring"
-  FID: False
+  FID: True
+  mode: 'X'
