--- a/configs/models/XSAE/standard.yaml
+++ b/configs/models/XSAE/standard.yaml
@@ -10,6 +10,8 @@ model_params:
   channels: 32
   # sparsity regularisation parameters
   sparsity_lamda: 2.0
+  sparsity: True
+
 
 eval_params:
   name: "scoring"
