--- a/configs/models/XCVAE/standard.yaml
+++ b/configs/models/XCVAE/standard.yaml
@@ -11,12 +11,15 @@ model_params:
   # invariance regularisation parameters
   sparsity_lamda: 2.0
   invariance_lamda: 2.0
-  num_samples: 100
-  num_interventions: 20
+  num_samples: 10
+  num_interventions: 10
+  sparsity: True
+
 
 opt_params:
   KL_decay: 1.0
   beta_schedule: 'linear'
+  inv_lamda_schedule: 'linear'
 
 eval_params:
   name: "scoring"
