--- a/configs/standard.yaml
+++ b/configs/standard.yaml
@@ -9,6 +9,7 @@ opt_params:
   LR: 0.0001
   weight_decay: 0.0
   scheduler_gamma: 0.95
+  schedulers_step: 100
 
 data_params:
   dataset_name: null
