polished first experiment, parallelised causal training

--- a/configs/models/XCAE/standard.yaml
+++ b/configs/models/XCAE/standard.yaml
@@ -23,3 +23,7 @@ eval_params:
 
 opt_params:
   inv_lamda_schedule: 'linear'
+
+
+vis_params:
+  plot_every: 5 # hugher frequency for slower training
