--- a/configs/models/XCSAE/standard.yaml
+++ b/configs/models/XCSAE/standard.yaml
@@ -25,3 +25,7 @@ eval_params:
 
 opt_params:
   inv_lamda_schedule: 'linear'
+
+
+vis_params:
+  plot_every: 5 # hugher frequency for slower training
