fixed XCVAE explosion, added multidim and uniform options

--- a/configs/models/XCSAE/v121.yaml
+++ b/configs/models/XCSAE/v121.yaml
@@ -11,6 +11,8 @@ model_params:
   loss_type: "MSE"
   # invariance regularisation parameters
   lamda: 2.0
+  num_samples: 5
+  num_interventions: 10
 
 eval_params:
   name: "scoring"
