--- a/configs/models/XCAE/standard.yaml
+++ b/configs/models/XCAE/standard.yaml
@@ -8,11 +8,14 @@ model_params:
   unit_dim: 1
   channels: 32
   # regularisation parameters
-  sparsity_lamda: 2.0
+  sparsity_lamda: 0.01
   invariance_lamda: 2.0
-  num_samples: 50
+  num_samples: 10
   num_interventions: 10
-  sparsity: True
+  sparsity: False
+  # causal latent block parameters
+  parents_with_grad: True
+  gumbel: True
 
 
 eval_params:
@@ -23,7 +26,7 @@ eval_params:
 
 opt_params:
   inv_lamda_schedule: 'linear'
-  weight_decay: 1.0
+  weight_decay: 0.0
 
 
 vis_params:
