--- a/configs/models/XVAE/standard.yaml
+++ b/configs/models/XVAE/standard.yaml
@@ -7,6 +7,7 @@ model_params:
   unit_dim: 1
   channels: 32
   gaussian_init: 'xavier' #other option: 'normal'
+  loss_type: "BCE"
   #regularisation parameters
   beta: 4.0
   sparsity_lamda: 2.0
