--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-torchvision~=0.8.1
-pytorch_lightning==1.2.7
-numpy~=1.19.5
-h5py~=3.1.0
-webdataset==0.1.58
-six==1.15.0
-scipy~=1.3.1
 absl_py==0.12.0
-matplotlib~=3.1.1
-torch~=1.7.0
+matplotlib==3.3.4
 ray==1.2.0
-absl==0.0
-Pillow~=6.2.1
-PyYAML~=5.1.2
+torchsummary==1.5.1
+pytorch_lightning==1.2.7
+pandas==1.2.3
+torch==1.8.0
+torchvision==0.9.0
+seaborn==0.11.1
+scipy==1.5.3
+six==1.15.0
+h5py==3.1.0
+webdataset==0.1.58
+networkx==2.5
+numpy==1.19.2
+dcor==0.5.3
+Pillow==8.3.2
+PyYAML==5.4.1
 scikit_learn==0.24.2
-
-sklearn~=0.0
-scikit-learn~=0.21.3
-networkx~=2.5.1
-torchsummary~=1.5.1
